# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: ci.yaml
scripts/: start_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: health_check.rs
tests/: health_check.rs
